{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 23,
  "lineage": "841205fe-2b04-a169-c546-08cfe219d85b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02614736395f2a908",
            "arn": "arn:aws:ec2:us-east-1:345594599917:elastic-ip/eipalloc-02614736395f2a908",
            "domain": "vpc",
            "id": "eipalloc-02614736395f2a908",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-48-171-76.compute-1.amazonaws.com",
            "public_ip": "100.48.171.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gitops-lab-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-nat-eip",
              "Project": "k8s-gitops-lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:internet-gateway/igw-0a7500d95eb0b772f",
            "id": "igw-0a7500d95eb0b772f",
            "owner_id": "345594599917",
            "tags": {
              "Name": "gitops-lab-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-igw",
              "Project": "k8s-gitops-lab"
            },
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "dependencies": [
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02614736395f2a908",
            "association_id": "eipassoc-06109f7c077d3e35a",
            "connectivity_type": "public",
            "id": "nat-089dbb9bb88bf950f",
            "network_interface_id": "eni-07d2d857b608dd46a",
            "private_ip": "10.0.0.170",
            "public_ip": "100.48.171.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b0fb48e8dff274f",
            "tags": {
              "Name": "gitops-lab-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-nat",
              "Project": "k8s-gitops-lab"
            }
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:route-table/rtb-0a45cacc2644719d4",
            "id": "rtb-0a45cacc2644719d4",
            "owner_id": "345594599917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089dbb9bb88bf950f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gitops-lab-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-private-rt",
              "Project": "k8s-gitops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_nat_gateway.main",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:route-table/rtb-060bcb5958c7e1bd2",
            "id": "rtb-060bcb5958c7e1bd2",
            "owner_id": "345594599917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7500d95eb0b772f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gitops-lab-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-public-rt",
              "Project": "k8s-gitops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0910dd7c4c8e35731",
            "route_table_id": "rtb-0a45cacc2644719d4",
            "subnet_id": "subnet-00b87f47e3980e706"
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_nat_gateway.main",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00439bf051b0be9bc",
            "route_table_id": "rtb-0a45cacc2644719d4",
            "subnet_id": "subnet-00c262a9f390d4b31"
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_nat_gateway.main",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08236e507a7774f85",
            "route_table_id": "rtb-060bcb5958c7e1bd2",
            "subnet_id": "subnet-09b0fb48e8dff274f"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efba2d1f53cba40f",
            "route_table_id": "rtb-060bcb5958c7e1bd2",
            "subnet_id": "subnet-046fb0f2095c47a91"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:subnet/subnet-00b87f47e3980e706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b87f47e3980e706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345594599917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-lab-private-1",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-private-1",
              "Project": "k8s-gitops-lab",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:subnet/subnet-00c262a9f390d4b31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c262a9f390d4b31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345594599917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-lab-private-2",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-private-2",
              "Project": "k8s-gitops-lab",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:subnet/subnet-09b0fb48e8dff274f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b0fb48e8dff274f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345594599917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-lab-public-1",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-public-1",
              "Project": "k8s-gitops-lab",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:subnet/subnet-046fb0f2095c47a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046fb0f2095c47a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345594599917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitops-lab-public-2",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-public-2",
              "Project": "k8s-gitops-lab",
              "kubernetes.io/cluster/gitops-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-030e908c7400b0c82"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:345594599917:vpc/vpc-030e908c7400b0c82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1e7126dc3d84ef8",
            "default_route_table_id": "rtb-0d025c25a535a590c",
            "default_security_group_id": "sg-08192407bd4faed4c",
            "dhcp_options_id": "dopt-05e5e4b35a95c79bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030e908c7400b0c82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d025c25a535a590c",
            "owner_id": "345594599917",
            "tags": {
              "Name": "gitops-lab-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "gitops-lab-vpc",
              "Project": "k8s-gitops-lab"
            }
          }
        }
      ]
    }
  ]
}